--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,6 +2,8 @@
     <string name="app_name">RobiiTCC</string>
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
+    <string name="prompt_forgotpassword">Forgot password?</string>
+    <string name="prompt_haveaccount">Have a account? Sign in</string>
     <string name="prompt_password">Password</string>
     <string name="action_sign_in">Sign in or register</string>
     <string name="action_sign_in_short">Sign in</string>
