Bottom Navigation between Home and Profile

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,9 +49,9 @@
     <string name="menu_stop">Stop</string>
     <string name="is_serial">Serial Present:</string>
     <string-array name="roygbiv">
-        <item >Red</item>
-        <item >Green</item>
-        <item >Blue</item>
+        <item>Red</item>
+        <item>Green</item>
+        <item>Blue</item>
     </string-array>
     <string name="button">Send</string>
     <string name="red_slide">Red</string>
@@ -60,4 +60,6 @@
     <string name="login">Login</string>
     <string name="contentDescription_login_logo">Logo Robii</string>
     <string name="button_login">Login</string>
+    <string name="menu_profile">Profile</string>
+    <string name="menu_home">Home</string>
 </resources>
