--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">RobiiTCC</string>
+    <string name="app_name">Robii</string>
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
     <string name="prompt_forgot_password">Forgot password?</string>
