--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -63,4 +63,13 @@
     <string name="menu_profile">Profile</string>
     <string name="sequence_phrase">Robii</string>
 
-<string name="menu_home">Home</string></resources>
+<string name="menu_home">Home</string>
+    <string name="profile_hint_username">Username</string>
+    <string name="profile_TXTemail">Email:</string>
+    <string name="profile_TXTname">Name:</string>
+    <string name="profile_total_progress">Total Progress</string>
+    <string name="profile_TXTavatar">Avatar</string>
+    <string name="profile_hint_birthdate">Birth date</string>
+    <string name="profile_hint_name">Name</string>
+    <string name="loading_robot">Robô \n executando...</string>
+</resources>
