--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,12 +2,12 @@
     <string name="app_name">Robii</string>
     <!-- Strings related to login -->
     <string name="prompt_username">Username</string>
-    <string name="prompt_forgot_password">Forgot password?</string>
-    <string name="prompt_haveaccount">Have a account? Sign in</string>
-    <string name="prompt_password">Password</string>
+    <string name="prompt_forgot_password">Esqueceu sua senha?</string>
+    <string name="prompt_haveaccount">Você tem uma conta? Faça login</string>
+    <string name="prompt_password">Senha</string>
     <string name="action_sign_in">Sign in or register</string>
-    <string name="action_sign_in_short">Sign in</string>
-    <string name="welcome">"Welcome!"</string>
+    <string name="action_sign_in_short">Registrar-se</string>
+    <string name="welcome">"Bem-vindo!"</string>
     <string name="invalid_username">Not a valid username</string>
     <string name="invalid_password">Password must be >5 characters</string>
     <string name="login_failed">"Login failed"</string>
@@ -26,7 +26,7 @@
     <string name="unknown_characteristic">Unknown characteristic</string>
     <string name="unknown_service">Unknown service</string>
 
-    <string name="text_view_signup">Sign Up</string>
+    <string name="text_view_signup">Registrar-se</string>
 
     <!-- Progress Bar -->
     <string name="progress_percentage">0%</string>
@@ -67,7 +67,7 @@
     <string name="profile_hint_username">Username</string>
     <string name="profile_TXTemail">Email:</string>
     <string name="profile_TXTname">Name:</string>
-    <string name="profile_total_progress">Total Progress</string>
+    <string name="profile_total_progress">Total do seu progresso</string>
     <string name="profile_TXTavatar">Avatar</string>
     <string name="profile_hint_birthdate">-</string>
     <string name="profile_hint_name">-</string>
